--- a/src/main/resources/templates/sign_up.html
+++ b/src/main/resources/templates/sign_up.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>State tax calculator form</title>
+    <title>SignUp | State Tax Calculator</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
@@ -20,11 +20,14 @@
     </style>
 </head>
 <body>
+    <div align="right">
+        <a class="button" href="/">Home</a>
+    </div>
     <div align="center">
         <h1>
             User registration
         </h1>
-        <form action="#" th:action="@{/register_user}" th:object="${user}" method="post">
+        <form action="#" th:action="@{/sign_up_submit}" th:object="${user}" method="post">
             <label>Name:</label>
             <input type="text" th:field="*{name}"><br>
             <label>E-mail:</label>
