--- a/src/main/resources/templates/sign_up_success.html
+++ b/src/main/resources/templates/sign_up_success.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Registration Success</title>
+    <title>Sign up Success | State Tax Calculator</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
@@ -15,9 +15,12 @@
     </style>
 </head>
 <body>
+    <div align="right">
+        <a class="button" href="/">Home</a>
+    </div>
     <div align="center">
         <h1>
-            Registration Succeeded.
+            Sign up Succeeded.
         </h1>
         <span>Name: </span><span th:text="${user.name}"></span><br>
         <span>E-mail: </span><span th:text="${user.email}"></span><br>
