Added JUnit tests for repositories. Added UserMapper. Added H2 database dependency.

--- a/src/main/resources/templates/sign_up_success.html
+++ b/src/main/resources/templates/sign_up_success.html
@@ -24,7 +24,7 @@
         </h1>
         <span>Name: </span><span th:text="${user.name}"></span><br>
         <span>E-mail: </span><span th:text="${user.email}"></span><br>
-        <span>Password: </span><span th:text="${user.password}"></span><br>
+<!--        <span>Password: </span><span th:text="${user.password}"></span><br>-->
     </div>
 </body>
 </html>
