--- a/src/main/resources/templates/account.html
+++ b/src/main/resources/templates/account.html
@@ -2,12 +2,10 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>SignUp | Income Tax Calculator</title>
+    <title>Account | Income Tax Calculator</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="js/app.js"></script>
-    <script src="jquery/jquery-3.6.3.min.js"></script>
     <style type="text/css">
         label {
             display: inline-block;
@@ -18,6 +16,10 @@
         button {
             margin: 10px;
             padding: 10px;
+        }
+        input [type=text], input [type=password], select {
+            display: inline-block;
+            width: 200px;
         }
     </style>
 </head>
@@ -30,6 +32,23 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <!--                <li class="nav-item">-->
+                    <!--                    <a class="nav-link active" aria-current="page" href="/">Home</a>-->
+                    <!--                </li>-->
+<!--                    <li><a class="btn btn-primary" th:href="@{./sign_up}">Sign Up</a></li>-->
+
+    <!--                <li class="nav-item dropdown">-->
+    <!--                    <a class="btn btn-primary dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">-->
+    <!--                        Log In/Sign Up-->
+    <!--                    </a>-->
+    <!--                    <ul class="dropdown-menu">-->
+    <!--                        <li><a class="dropdown-item" th:href="@{./login}">Log In</a></li>-->
+    <!--                        <li><a class="dropdown-item" th:href="@{./sign_up}">Sign Up</a></li>-->
+    <!--                        &lt;!&ndash;                        <li><hr class="dropdown-divider"></li>&ndash;&gt;-->
+    <!--                    </ul>-->
+    <!--                </li>-->
+                </ul>
     <!--            <form class="d-flex" role="search">-->
     <!--                <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">-->
     <!--                <button class="btn btn-outline-primary" type="submit">Search</button>-->
@@ -41,39 +60,49 @@
     <div align="center">
         <div style="border-style:solid; width:650px;">
             <h1>
-                User registration
+                Account details
             </h1>
             <div th:if="${param.success}">
                 <div class="alert alert-info">
-                    You have registered successfully
+                    Name/email were successfully updated
                 </div>
             </div>
-            <form action="#" th:action="@{/sign_up/submit}" th:object="${userDTO}" method="post">
+            <form action="#" th:action="@{/account/submit}" th:object="${userDTO}" method="post">
                 <label>Name:</label>
-                <input id="signUp__name" type="text" th:field="*{name}"><br>
+                <input type="text" th:field="*{name}"><br>
                 <p th:if="${#fields.hasErrors('name')}" class="text-danger"
                    th:errors="*{name}"></p>
                 <label>E-mail:</label>
-                <input id="signUp__email" type="text" th:field="*{email}"><br>
+                <input type="text" th:field="*{email}"><br>
                 <p th:if="${#fields.hasErrors('email')}" class="text-danger"
                    th:errors="*{email}"></p>
+<!--                <label>Password:</label>-->
+<!--                <input type="password" th:field="*{password}"><br>-->
+<!--                <p th:if="${#fields.hasErrors('password')}" class="text-danger"-->
+<!--                   th:errors="*{password}"></p>-->
+                <button class="btn btn-primary" type="submit">Update</button>
+            </form>
+            <br><br><br>
+            <div th:if="${param.successNewPassword}">
+                <div class="alert alert-info">
+                    Password was successfully updated
+                </div>
+            </div>
+            <form action="#" th:action="@{/account/submitNewPassword}" th:object="${userDTO}" method="post">
                 <label>Password:</label>
-                <input id="signUp__password" type="password" th:field="*{password}"><br>
+                <input type="password" th:field="*{password}"><br>
                 <p th:if="${#fields.hasErrors('password')}" class="text-danger"
                    th:errors="*{password}"></p>
                 <label>Confirm Password:</label>
-                <input id="signUp__password2" type="password" th:field="*{password2}"><br>
+                <input type="password" th:field="*{password2}"><br>
                 <p th:if="${#fields.hasErrors('password2')}" class="text-danger"
                    th:errors="*{password2}"></p>
-                <div class="form-group mb-3">
-                    <button type="submit" class="btn btn-primary">Sign Up</button>
-                    <span>Already register? <a th:href="@{./login}">Login Here</a></span>
-                </div>
+                <button class="btn btn-primary" type="submit">Set new password</button>
             </form>
         </div>
     </div>
 
-    <br><br><br><br><br><br><br><br><br><br><br><br><br>
+    <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 
     <footer class="footer-copyright text-center bg-primary py-3"
             style="position:fixed; height:50px; width:100%; button:0;">
