--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -1,16 +1,58 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Error | State Tax Calculator</title>
+    <title>Error | Income Tax Calculator</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 <body>
-    <div align="right">
-        <a class="button" href="/">Home</a>
-    </div>
-    An error happened
+    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="/">Income Tax Calculator</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <!--                <li class="nav-item">-->
+                    <!--                    <a class="nav-link active" aria-current="page" href="/">Home</a>-->
+                    <!--                </li>-->
+                    <!--                <li class="nav-item">-->
+                    <!--                    <a class="nav-link" href="#">Link</a>-->
+                    <!--                </li>-->
+                    <!--               -->
+                    <li class="nav-item dropdown">
+                        <a class="btn btn-primary dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            Log In/Sign Up
+                        </a>
+                        <ul class="dropdown-menu">
+                            <li><a class="dropdown-item" th:href="@{./login}">Log In</a></li>
+                            <li><a class="dropdown-item" th:href="@{./sign_up}">Sign Up</a></li>
+                            <!--                        <li><hr class="dropdown-divider"></li>-->
+                        </ul>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+
+    <h1>
+        An error happened
+    </h1>
+
+    <br><br><br><br><br><br><br><br><br><br><br>
+
+    <footer class="footer-copyright text-center bg-primary py-3"
+            style="position:fixed; height:50px; width:100%; button:0;">
+        <div>
+            <strong>
+                Copyright &copy; 2023 <a href="www.liubov.org">Income Tax Calculator</a>
+                All rights reserved.
+            </strong>
+        </div>
+    </footer>
 </body>
 </html>
