--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Login | State Tax Calculator</title>
+    <title>Login | Income Tax Calculator</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
@@ -21,24 +21,71 @@
             display: inline-block;
             width: 200px;
         }
-
     </style>
 </head>
 <body>
-    <div align="right">
-        <a class="button" href="/">Home</a>
-    </div>
+    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="/">Income Tax Calculator</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <!--                <li class="nav-item">-->
+                    <!--                    <a class="nav-link active" aria-current="page" href="/">Home</a>-->
+                    <!--                </li>-->
+                    <li><a class="btn btn-primary" th:href="@{./sign_up}">Sign Up</a></li>
+
+    <!--                <li class="nav-item dropdown">-->
+    <!--                    <a class="btn btn-primary dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">-->
+    <!--                        Log In/Sign Up-->
+    <!--                    </a>-->
+    <!--                    <ul class="dropdown-menu">-->
+    <!--                        <li><a class="dropdown-item" th:href="@{./login}">Log In</a></li>-->
+    <!--                        <li><a class="dropdown-item" th:href="@{./sign_up}">Sign Up</a></li>-->
+    <!--                        &lt;!&ndash;                        <li><hr class="dropdown-divider"></li>&ndash;&gt;-->
+    <!--                    </ul>-->
+    <!--                </li>-->
+                </ul>
+    <!--            <form class="d-flex" role="search">-->
+    <!--                <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">-->
+    <!--                <button class="btn btn-outline-primary" type="submit">Search</button>-->
+    <!--            </form>-->
+            </div>
+        </div>
+    </nav>
+
     <div align="center">
-        <h1>
-            Login User
-        </h1>
-        <form action="#" th:action="@{/login_submit}" th:object="${user}" method="post">
-            <label>E-mail:</label>
-            <input type="text" th:field="*{email}"><br>
-            <label>Password:</label>
-            <input type="password" th:field="*{password}"><br>
-            <button type="submit">Submit</button>
-        </form>
+        <div style="border-style:solid; width:650px;">
+            <h1>
+                Login User
+            </h1>
+            <form action="#" th:action="@{/login/submit}" th:object="${userDTO}" method="post">
+                <label>E-mail:</label>
+                <input type="text" th:field="*{email}"><br>
+                <p th:if="${#fields.hasErrors('email')}" class="text-danger"
+                   th:errors="*{email}"></p>
+                <label>Password:</label>
+                <input type="password" th:field="*{password}"><br>
+                <p th:if="${#fields.hasErrors('password')}" class="text-danger"
+                   th:errors="*{password}"></p>
+                <button class="btn btn-primary" type="submit">Login</button>
+            </form>
+        </div>
     </div>
+
+    <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+
+    <footer class="footer-copyright text-center bg-primary py-3"
+            style="position:fixed; height:50px; width:100%; button:0;">
+        <div>
+            <strong>
+                Copyright &copy; 2023 <a href="www.liubov.org">Income Tax Calculator</a>
+                All rights reserved.
+            </strong>
+        </div>
+    </footer>
 </body>
 </html>
