Added CSS, JS, Logo. Prepared for presentation.

--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -5,25 +5,23 @@
     <title>Error | Income Tax Calculator</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="css/app.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="jquery/jquery-3.6.3.min.js"></script>
+    <script src="js/app.js"></script>
 </head>
 <body>
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
-            <a class="navbar-brand" href="/">Income Tax Calculator</a>
+            <a class="navbar-brand" href="/">
+                <img border="0" alt="Income Tax Calculator" src="img/logo.png" width="90" height="60">
+            </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                    <!--                <li class="nav-item">-->
-                    <!--                    <a class="nav-link active" aria-current="page" href="/">Home</a>-->
-                    <!--                </li>-->
-                    <!--                <li class="nav-item">-->
-                    <!--                    <a class="nav-link" href="#">Link</a>-->
-                    <!--                </li>-->
-                    <!--               -->
                     <li class="nav-item dropdown">
                         <a class="btn btn-primary dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                             Log In/Sign Up
@@ -31,7 +29,6 @@
                         <ul class="dropdown-menu">
                             <li><a class="dropdown-item" th:href="@{./login}">Log In</a></li>
                             <li><a class="dropdown-item" th:href="@{./sign_up}">Sign Up</a></li>
-                            <!--                        <li><hr class="dropdown-divider"></li>-->
                         </ul>
                     </li>
                 </ul>
