--- a/src/main/resources/templates/calculations.html
+++ b/src/main/resources/templates/calculations.html
@@ -5,21 +5,23 @@
     <title>Calculations | Income Tax Calculator</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="css/app.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="jquery/jquery-3.6.3.min.js"></script>
+    <script src="js/app.js"></script>
 </head>
 <body>
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
-            <a class="navbar-brand" href="/">Income Tax Calculator</a>
+            <a class="navbar-brand" href="/">
+                <img border="0" alt="Income Tax Calculator" src="img/logo.png" width="90" height="60">
+            </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                    <!--                <li class="nav-item">-->
-                    <!--                    <a class="nav-link active" aria-current="page" href="/">Home</a>-->
-                    <!--                </li>-->
                     <li class="nav-item dropdown">
                         <a class="btn btn-primary dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                             Log In/Sign Up
@@ -30,67 +32,43 @@
                         </ul>
                     </li>
                 </ul>
-    <!--            <form class="d-flex" role="search">-->
-    <!--                <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">-->
-    <!--                <button class="btn btn-outline-primary" type="submit">Search</button>-->
-    <!--            </form>-->
             </div>
         </div>
     </nav>
 
     <div align="center">
-        <div style="border-style:solid; width:650px;">
-            <h1>
-                Approximate result
-            </h1>
-            <table>
+        <h1>
+            Calculations
+        </h1>
+        <div th:if="${not#lists.isEmpty(fillingParametersDTOList)}">
+            <table class="table table-striped">
                 <tr>
-                    <td align="right"><strong><span>Year: &nbsp;</span></strong></td>
-                    <td><span th:text="${fillingParametersDTO.year}"></span></td>
+                    <th>Year</th>
+                    <th>State</th>
+                    <th>Filling Status</th>
+                    <th>Income</th>
+                    <th>State Tax</th>
+                    <th>Federal Tax</th>
+                    <th>FICA Tax</th>
+                    <th>Medicare Tax</th>
+                    <th>Total Tax</th>
+                    <th>Effective Tax Rate</th>
+                    <th>Date</th>
+<!--                    <th>updatedOn</th>-->
                 </tr>
-                <tr>
-                    <td align="right"><strong><span>State: &nbsp;</span></strong></td>
-                    <td><span th:text="${fillingParametersDTO.state}"></span></td>
-                </tr>
-                <tr>
-                    <td align="right"><strong><span>Filling Status: &nbsp;</span></strong></td>
-                    <td><span th:text="${fillingParametersDTO.fillingStatus}"></span></td>
-                </tr>
-                <tr>
-                    <td align="right"><strong><span>Income: &nbsp;</span></strong></td>
-                    <td>$<span th:text="${fillingParametersDTO.income}"></span></td>
-                </tr>
-                <tr>
-                    <td>&nbsp;</td>
-                    <td>&nbsp;</td>
-                </tr>
-                <tr>
-                    <td align="right"><strong><span>State Tax Amount: &nbsp;</span></strong></td>
-                    <td>$<span th:text="${fillingParametersDTO.stateTaxAmount}"></span></td>
-                </tr>
-                <tr>
-                    <td align="right"><strong><span>Federal Tax Amount: &nbsp;</span></strong></td>
-                    <td>$<span th:text="${fillingParametersDTO.federalTaxAmount}"></span></td>
-                </tr>
-                <tr>
-                    <td align="right"><strong><span>FICA Tax Amount: &nbsp;</span></strong></td>
-                    <td>$<span th:text="${fillingParametersDTO.ficaTaxAmount}"></span></td>
-                </tr>
-                <tr>
-                    <td align="right"><strong><span>Additional Medicare Tax Amount: &nbsp;</span></strong></td>
-                    <td>$<span th:text="${fillingParametersDTO.additionalMedicareTaxAmount}"></span></td>
-                </tr>
-                <tr>
-                    <td>&nbsp;</td>
-                    <td>&nbsp;</td>
-                </tr>
-                <tr>
-                    <td align="right"><strong><span>Total Tax Amount: &nbsp;</span></strong></td>
-                    <td>$<span th:text="${fillingParametersDTO.totalTaxAmount}"></span></td>
-                </tr>
-                <tr>
-                    <td align="right"><strong><span>Effective Tax Rate: &nbsp;</span></strong></td>
-                    <td><span th:text="${fillingParametersDTO.effectiveTaxRate}"></span>%</td>
+                <tr th:each="p : ${fillingParametersDTOList}">
+                    <td th:text="${p.year}"></td>
+                    <td th:text="${p.state}"></td>
+                    <td th:text="${p.fillingStatus}"></td>
+                    <td th:text="${p.income}"></td>
+                    <td th:text="${p.stateTaxAmount}"></td>
+                    <td th:text="${p.federalTaxAmount}"></td>
+                    <td th:text="${p.ficaTaxAmount}"></td>
+                    <td th:text="${p.additionalMedicareTaxAmount}"></td>
+                    <td th:text="${p.totalTaxAmount}"></td>
+                    <td th:text="${p.effectiveTaxRate}"></td>
+                    <td th:text="${p.createdOn}"></td>
+<!--                    <td th:text="${p.updatedOn}"></td>-->
                 </tr>
             </table>
         </div>
