--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -5,60 +5,34 @@
     <title>Login | Income Tax Calculator</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="css/app.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
-    <style type="text/css">
-        label {
-            display: inline-block;
-            width: 200px;
-            margin: 5px;
-            text-align: left;
-        }
-        button {
-            margin: 10px;
-            padding: 10px;
-        }
-        input [type=text], input [type=password], select {
-            display: inline-block;
-            width: 200px;
-        }
-    </style>
+    <script src="jquery/jquery-3.6.3.min.js"></script>
+    <script src="js/app.js"></script>
 </head>
 <body>
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
-            <a class="navbar-brand" href="/">Income Tax Calculator</a>
+            <a class="navbar-brand" href="/">
+                <img border="0" alt="Income Tax Calculator" src="img/logo.png" width="90" height="60">
+            </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                    <!--                <li class="nav-item">-->
-                    <!--                    <a class="nav-link active" aria-current="page" href="/">Home</a>-->
-                    <!--                </li>-->
                     <li><a class="btn btn-primary" th:href="@{./sign_up}">Sign Up</a></li>
-
-    <!--                <li class="nav-item dropdown">-->
-    <!--                    <a class="btn btn-primary dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">-->
-    <!--                        Log In/Sign Up-->
-    <!--                    </a>-->
-    <!--                    <ul class="dropdown-menu">-->
-    <!--                        <li><a class="dropdown-item" th:href="@{./login}">Log In</a></li>-->
-    <!--                        <li><a class="dropdown-item" th:href="@{./sign_up}">Sign Up</a></li>-->
-    <!--                        &lt;!&ndash;                        <li><hr class="dropdown-divider"></li>&ndash;&gt;-->
-    <!--                    </ul>-->
-    <!--                </li>-->
                 </ul>
-    <!--            <form class="d-flex" role="search">-->
-    <!--                <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">-->
-    <!--                <button class="btn btn-outline-primary" type="submit">Search</button>-->
-    <!--            </form>-->
             </div>
         </div>
     </nav>
 
     <div align="center">
-        <div style="border-style:solid; width:650px;">
+        <div th:if="${param.logout}">
+            <div class="alert alert-success">You have been logged out.</div>
+        </div>
+        <div style="border-style:solid; width:650px; padding: 20px;">
             <h1>
                 Login User
             </h1>
@@ -72,11 +46,12 @@
                 <p th:if="${#fields.hasErrors('password')}" class="text-danger"
                    th:errors="*{password}"></p>
                 <button class="btn btn-primary" type="submit">Login</button>
+                <span>Not registered yet? <a th:href="@{./sign_up}">Register/ Sign Up Here</a></span>
             </form>
         </div>
     </div>
 
-    <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+    <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 
     <footer class="footer-copyright text-center bg-primary py-3"
             style="position:fixed; height:50px; width:100%; button:0;">
