--- a/src/main/resources/templates/results.html
+++ b/src/main/resources/templates/results.html
@@ -2,24 +2,26 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Approximate result | Income Tax Calculator</title>
+    <title>SignUp | Income Tax Calculator</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="css/app.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="jquery/jquery-3.6.3.min.js"></script>
+    <script src="js/app.js"></script>
 </head>
 <body>
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
-            <a class="navbar-brand" href="/">Income Tax Calculator</a>
+            <a class="navbar-brand" href="/">
+                <img border="0" alt="Income Tax Calculator" src="img/logo.png" width="90" height="60">
+            </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                    <!--                <li class="nav-item">-->
-                    <!--                    <a class="nav-link active" aria-current="page" href="/">Home</a>-->
-                    <!--                </li>-->
                     <li class="nav-item dropdown">
                         <a class="btn btn-primary dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                             Log In/Sign Up
@@ -30,16 +32,12 @@
                         </ul>
                     </li>
                 </ul>
-    <!--            <form class="d-flex" role="search">-->
-    <!--                <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">-->
-    <!--                <button class="btn btn-outline-primary" type="submit">Search</button>-->
-    <!--            </form>-->
             </div>
         </div>
     </nav>
 
     <div align="center">
-        <div style="border-style:solid; width:650px;">
+        <div style="border-style:solid; width:650px; padding: 20px;">
             <h1>
                 Approximate result
             </h1>
@@ -96,16 +94,7 @@
         </div>
     </div>
 
-    <br><br><br><br><br><br><br><br><br>
-
-<!--    <form action="#" th:action="@{/login/submit}" th:object="${userDTO}" method="post">-->
-<!--        <label>E-mail:</label>-->
-<!--        <input type="text" th:field="*{email}"><br>-->
-<!--        <label>Password:</label>-->
-<!--        <input type="password" th:field="*{password}"><br>-->
-
-<!--        <button class="btn btn-primary" type="submit">Submit</button>-->
-<!--    </form>-->
+    <br><br><br><br><br><br><br><br><br><br><br>
 
     <footer class="footer-copyright text-center bg-primary py-3"
             style="position:fixed; height:50px; width:100%; button:0;">
