--- a/src/main/resources/templates/sign_up.html
+++ b/src/main/resources/templates/sign_up.html
@@ -5,41 +5,28 @@
     <title>SignUp | Income Tax Calculator</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="css/app.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="js/app.js"></script>
     <script src="jquery/jquery-3.6.3.min.js"></script>
-    <style type="text/css">
-        label {
-            display: inline-block;
-            width: 200px;
-            margin: 5px;
-            text-align: left;
-        }
-        button {
-            margin: 10px;
-            padding: 10px;
-        }
-    </style>
+    <script src="js/app.js"></script>
 </head>
 <body>
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
-            <a class="navbar-brand" href="/">Income Tax Calculator</a>
+            <a class="navbar-brand" href="/">
+                <img border="0" alt="Income Tax Calculator" src="img/logo.png" width="90" height="60">
+            </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
-    <!--            <form class="d-flex" role="search">-->
-    <!--                <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">-->
-    <!--                <button class="btn btn-outline-primary" type="submit">Search</button>-->
-    <!--            </form>-->
             </div>
         </div>
     </nav>
 
     <div align="center">
-        <div style="border-style:solid; width:650px;">
+        <div style="border-style:solid; width:650px; padding: 20px;">
             <h1>
                 User registration
             </h1>
@@ -67,13 +54,13 @@
                    th:errors="*{password2}"></p>
                 <div class="form-group mb-3">
                     <button type="submit" class="btn btn-primary">Sign Up</button>
-                    <span>Already register? <a th:href="@{./login}">Login Here</a></span>
+                    <span>Already registered? <a th:href="@{./login}">Login Here</a></span>
                 </div>
             </form>
         </div>
     </div>
 
-    <br><br><br><br><br><br><br><br><br><br><br><br><br>
+    <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 
     <footer class="footer-copyright text-center bg-primary py-3"
             style="position:fixed; height:50px; width:100%; button:0;">
