Added loading of data in federal and state tax brackets tables. Improved the design. Show the details of error in case not enough data in tables.

--- a/src/main/resources/static/css/app.css
+++ b/src/main/resources/static/css/app.css
@@ -13,12 +13,12 @@ label {
     margin: 5px;
     text-align: left;
 }
-
+/*
 button {
     margin: 10px;
     padding: 10px;
 }
-
+*/
 input [type=text], input [type=password], select {
     display: inline-block;
     width: 200px;
