--- a/src/main/resources/templates/results.html
+++ b/src/main/resources/templates/results.html
@@ -90,7 +90,7 @@
                     <td align="right"><strong><span>Effective Tax Rate: &nbsp;</span></strong></td>
                     <td><span th:text="${fillingParametersDTO.effectiveTaxRate}"></span>%</td>
                 </tr>
-            </table>
+            </table><br>
         </div>
     </div>
 
@@ -100,7 +100,7 @@
             style="position:fixed; height:50px; width:100%; button:0;">
         <div>
             <strong>
-                Copyright &copy; 2023 <a href="www.liubov.org">Income Tax Calculator</a>
+                Copyright &copy; 2023
                 All rights reserved.
             </strong>
         </div>
