--- a/src/main/resources/templates/sign_up.html
+++ b/src/main/resources/templates/sign_up.html
@@ -51,7 +51,7 @@
                 <label>Confirm Password:</label>
                 <input id="signUp__password2" type="password" th:field="*{password2}"><br>
                 <p th:if="${#fields.hasErrors('password2')}" class="text-danger"
-                   th:errors="*{password2}"></p>
+                   th:errors="*{password2}"></p><br>
                 <div class="form-group mb-3">
                     <button type="submit" class="btn btn-primary">Sign Up</button>
                     <span>Already registered? <a th:href="@{./login}">Login Here</a></span>
@@ -66,7 +66,7 @@
             style="position:fixed; height:50px; width:100%; button:0;">
         <div>
             <strong>
-                Copyright &copy; 2023 <a href="www.liubov.org">Income Tax Calculator</a>
+                Copyright &copy; 2023
                 All rights reserved.
             </strong>
         </div>
