--- a/src/main/resources/templates/results.html
+++ b/src/main/resources/templates/results.html
@@ -44,19 +44,19 @@
             <table>
                 <tr>
                     <td align="right"><strong><span>Year: &nbsp;</span></strong></td>
-                    <td><span th:text="${fillingParametersDTO.year}"></span></td>
+                    <td><span th:text="${filingParametersDTO.year}"></span></td>
                 </tr>
                 <tr>
                     <td align="right"><strong><span>State: &nbsp;</span></strong></td>
-                    <td><span th:text="${fillingParametersDTO.state}"></span></td>
+                    <td><span th:text="${filingParametersDTO.state}"></span></td>
                 </tr>
                 <tr>
-                    <td align="right"><strong><span>Filling Status: &nbsp;</span></strong></td>
-                    <td><span th:text="${fillingParametersDTO.fillingStatus}"></span></td>
+                    <td align="right"><strong><span>Filing Status: &nbsp;</span></strong></td>
+                    <td><span th:text="${filingParametersDTO.filingStatus}"></span></td>
                 </tr>
                 <tr>
                     <td align="right"><strong><span>Income: &nbsp;</span></strong></td>
-                    <td>$<span th:text="${fillingParametersDTO.income}"></span></td>
+                    <td>$<span th:text="${filingParametersDTO.income}"></span></td>
                 </tr>
                 <tr>
                     <td>&nbsp;</td>
@@ -64,19 +64,19 @@
                 </tr>
                 <tr>
                     <td align="right"><strong><span>State Tax Amount: &nbsp;</span></strong></td>
-                    <td>$<span th:text="${fillingParametersDTO.stateTaxAmount}"></span></td>
+                    <td>$<span th:text="${filingParametersDTO.stateTaxAmount}"></span></td>
                 </tr>
                 <tr>
                     <td align="right"><strong><span>Federal Tax Amount: &nbsp;</span></strong></td>
-                    <td>$<span th:text="${fillingParametersDTO.federalTaxAmount}"></span></td>
+                    <td>$<span th:text="${filingParametersDTO.federalTaxAmount}"></span></td>
                 </tr>
                 <tr>
                     <td align="right"><strong><span>FICA Tax Amount: &nbsp;</span></strong></td>
-                    <td>$<span th:text="${fillingParametersDTO.ficaTaxAmount}"></span></td>
+                    <td>$<span th:text="${filingParametersDTO.ficaTaxAmount}"></span></td>
                 </tr>
                 <tr>
                     <td align="right"><strong><span>Additional Medicare Tax Amount: &nbsp;</span></strong></td>
-                    <td>$<span th:text="${fillingParametersDTO.additionalMedicareTaxAmount}"></span></td>
+                    <td>$<span th:text="${filingParametersDTO.additionalMedicareTaxAmount}"></span></td>
                 </tr>
                 <tr>
                     <td>&nbsp;</td>
@@ -84,11 +84,11 @@
                 </tr>
                 <tr>
                     <td align="right"><strong><span>Total Tax Amount: &nbsp;</span></strong></td>
-                    <td>$<span th:text="${fillingParametersDTO.totalTaxAmount}"></span></td>
+                    <td>$<span th:text="${filingParametersDTO.totalTaxAmount}"></span></td>
                 </tr>
                 <tr>
                     <td align="right"><strong><span>Effective Tax Rate: &nbsp;</span></strong></td>
-                    <td><span th:text="${fillingParametersDTO.effectiveTaxRate}"></span>%</td>
+                    <td><span th:text="${filingParametersDTO.effectiveTaxRate}"></span>%</td>
                 </tr>
             </table><br>
         </div>
