--- a/src/main/resources/templates/account.html
+++ b/src/main/resources/templates/account.html
@@ -11,21 +11,42 @@
     <script src="js/app.js"></script>
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="/">
-                <img border="0" alt="Income Tax Calculator" src="img/logo.png" width="90" height="60">
-            </a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                </ul>
-            </div>
+<nav class="navbar navbar-expand-lg bg-body-tertiary">
+    <div class="container-fluid">
+        <a class="navbar-brand" href="/">
+            <img border="0" alt="Income Tax Calculator" src="img/logo.png" width="90" height="60">
+        </a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                <li class="nav-item dropdown">
+                    <a class="btn btn-primary dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                        Log In/Sign Up
+                    </a>
+                    <ul class="dropdown-menu">
+                        <li><a class="dropdown-item" th:href="@{./login}">Log In</a></li>
+                        <li><a class="dropdown-item" th:href="@{./sign_up}">Sign Up</a></li>
+                    </ul>
+                </li>
+                <li>&nbsp;&nbsp;</li>
+                <li class="nav-item">
+                    <a class="btn btn-primary" th:href="@{./account}" role="button">Account</a>
+                </li>
+                <li>&nbsp;&nbsp;</li>
+                <li class="nav-item">
+                    <a class="btn btn-primary" th:href="@{./calculations}" role="button">Calculations</a>
+                </li>
+                <li>&nbsp;&nbsp;</li>
+                <li class="nav-item">
+                    <a class="btn btn-primary" th:href="@{./logout}" role="button">Logout</a>
+                </li>
+            </ul>
         </div>
-    </nav>
+    </div>
+</nav>
 
     <div align="center">
         <div style="border-style:solid; width:650px; padding: 20px;">
