--- a/src/main/resources/templates/sign_up.html
+++ b/src/main/resources/templates/sign_up.html
@@ -54,7 +54,7 @@
                    th:errors="*{password2}"></p><br>
                 <div class="form-group mb-3">
                     <button type="submit" class="btn btn-primary">Sign Up</button>
-                    <span>Already registered? <a th:href="@{./login}">Login Here</a></span>
+                    <span>Already registered? <a th:href="@{./login2}">Login Here</a></span>
                 </div>
             </form>
         </div>
