--- a/src/main/resources/templates/results.html
+++ b/src/main/resources/templates/results.html
@@ -27,7 +27,7 @@
                             Log In/Sign Up
                         </a>
                         <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" th:href="@{./login}">Log In</a></li>
+                            <li><a class="dropdown-item" th:href="@{./login2}">Log In</a></li>
                             <li><a class="dropdown-item" th:href="@{./sign_up}">Sign Up</a></li>
                         </ul>
                     </li>
